# mpox-yolov10

./: Dockerfile  README.md  data-augumentation  requirements.txt
.github/: Doxyfile
.github/workflows/: create-release.yml  doxygen-deployment.yml  humble-docker-build.yml  iron-docker-build.yml  iron-docker-push.yml  jazzy-docker-build.yml  jazzy-docker-push.yml  kilted-docker-build.yml  kilted-docker-push.yml  python-formatter.yml  rolling-docker-build.yml  rolling-docker-push.yml
yolo_bringup/: CMakeLists.txt  package.xml
yolo_msgs/: CMakeLists.txt  package.xml
yolo_msgs/msg/: BoundingBox2D.msg  BoundingBox3D.msg  Detection.msg  DetectionArray.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  KeyPoint3D.msg  KeyPoint3DArray.msg  Mask.msg  Point2D.msg  Pose2D.msg  Vector2.msg
yolo_ros/: package.xml  setup.cfg  setup.py
yolo_ros/test/: test_copyright.py
